# parate-welding-workshop

./: .gitignore  .replit  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  add_deleted_column.py  app.py  build_note.txt  docker-compose.yml  fix_payment_history_schema.py  freeze.py  gunicorn.conf.py  main.py  migrate_database.py  models.py  pyproject.toml  railway_requirements.backup.txt  railway_requirements.txt  render.yaml  replit.nix  requirements.backup.txt  routes.py  wsgi.py
deployment_guides/: RAILWAY_DEPLOYMENT_GUIDE.md
instance/: bills.db
static/css/: style.css
static/js/: form.js  theme.js
templates/: bills.html  bills.html.bak  edit_bill.html  edit_payment.html  error.html  index.html  layout.html  login.html  payment_history.html  view_bill.html
utils/: db_backup.py  pdf_generator.py  qrcode_generator.py
