[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "frozen-flask>=1.0.2",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "qrcode>=8.1",
    "replit>=4.1.1",
    "reportlab>=4.3.1",
    "sqlalchemy>=2.0.38",
    "trafilatura>=2.0.0",
]
